--- a/chart/clusters/sandbox/apps/values.yaml
+++ b/chart/clusters/sandbox/apps/values.yaml
@@ -8,6 +8,10 @@ extensions-oidc:
   createNamespace: true
   enable: true
 
+report-portal:
+  createNamespace: true
+  enable: true
+
 # Harbor with HA
 harbor-ha:
   createNamespace: true
