values for test cluster

--- a/chart/clusters/sandbox/custom/report-portal/values.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/values.yaml
@@ -27,22 +27,22 @@ reportportal:
   rabbitmq:
     SecretName: "reportportal-rabbitmq-creds"
     endpoint:
-      address: sandbox-rabbitmq.report-portal.svc.cluster.local
+      address: rabbitmq.report-portal.svc.cluster.local
       user: user
       apiuser: user
 
   postgresql:
     SecretName: "reportportal-postgresql-creds"
     endpoint:
-      address: sandbox-postgresql.report-portal.svc.cluster.local
+      address: postgresql.report-portal.svc.cluster.local
 
   elasticsearch:
     endpoint: http://elasticsearch-master.report-portal.svc.cluster.local:9200
 
   minio:
     secretName: "reportportal-minio-creds"
-    endpoint: http://sandbox-minio.report-portal.svc.cluster.local:9000
-    endpointshort: sandbox-minio.report-portal.svc.cluster.local:9000
+    endpoint: http://minio.report-portal.svc.cluster.local:9000
+    endpointshort: minio.report-portal.svc.cluster.local:9000
     accesskeyName: "root-user"
     secretkeyName: "root-password"
 
