--- a/chart/clusters/sandbox/custom/report-portal/values.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/values.yaml
@@ -60,7 +60,7 @@ elasticsearch:
     - name: discovery.type
       value: single-node
     - name: cluster.initial_master_nodes
-      value: ""
+      value: null
 
   resources:
     requests:
