--- a/chart/clusters/sandbox/custom/report-portal/values.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/values.yaml
@@ -59,6 +59,8 @@ elasticsearch:
   extraEnvs:
     - name: discovery.type
       value: single-node
+    - name: discovery.seed_hosts
+      value: 127.0.0.1:9300
 
   resources:
     requests:
