--- a/chart/clusters/sandbox/custom/report-portal/values.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/values.yaml
@@ -59,6 +59,8 @@ elasticsearch:
   extraEnvs:
     - name: discovery.type
       value: single-node
+    - name: cluster.initial_master_nodes
+      value: ""
 
   resources:
     requests:
