--- a/chart/clusters/sandbox/custom/report-portal/values.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/values.yaml
@@ -37,7 +37,7 @@ reportportal:
       address: report-portal-postgresql.report-portal.svc.cluster.local
 
   elasticsearch:
-    endpoint: http://elasticsearch-master.report-portal.svc.cluster.local:9200
+    endpoint: http://postgresql-primary.report-portal.svc.cluster.local:5432
 
   storage:
     type: minio
