--- a/chart/clusters/sandbox/custom/report-portal/templates/external-secrets/postgres-cluster.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/templates/external-secrets/postgres-cluster.yaml
@@ -14,6 +14,9 @@ spec:
         resources:
           requests:
             storage: 5Gi
+  databaseInitSQL:
+    key: init.sql
+    name: hippo-init-sql
 
   users:
     - name: rpuser
