--- a/chart/clusters/sandbox/custom/report-portal/templates/external-secrets/postgres-cluster.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/templates/external-secrets/postgres-cluster.yaml
@@ -38,3 +38,9 @@ spec:
               resources:
                 requests:
                   storage: 1Gi
+
+  patroni:
+    dynamicConfiguration:
+      postgresql:
+        pg_hba:
+          - "host all all 0.0.0.0/0 trust"
