--- a/chart/clusters/sandbox/custom/report-portal/templates/external-secrets/postgres-cluster.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/templates/external-secrets/postgres-cluster.yaml
@@ -23,8 +23,12 @@ spec:
       databases:
         - reportportal
       options: "SUPERUSER"
-      password:
-        type: AlphaNumeric
+      password: "7vpGwXD0aNVSzsBe"
+    - name: rpuser
+      databases:
+        - reportportal
+      options: "SUPERUSER"
+      password: "RZGrLBQcp9jNZ82G"
 
   backups:
     pgbackrest:
