--- a/chart/clusters/sandbox/custom/report-portal/templates/external-secrets/postgres-cluster.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/templates/external-secrets/postgres-cluster.yaml
@@ -4,7 +4,7 @@ metadata:
   name: postgresql
 spec:
   image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres:ubi8-14.8-0
-  postgresVersion: 14
+  postgresVersion: 11
   instances:
     - name: pgha1
       replicas: 2
@@ -23,12 +23,15 @@ spec:
       databases:
         - reportportal
       options: "SUPERUSER"
-      password: "7vpGwXD0aNVSzsBe"
+      password:
+        type: AlphaNumeric
+        
     - name: postgres
       databases:
         - reportportal
       options: "SUPERUSER"
-      password: "RZGrLBQcp9jNZ82G"
+      password:
+        type: AlphaNumeric
 
   backups:
     pgbackrest:
