[EPMDEDP-12923]: chore: Revise report-portal to be compatible with postgres-operator

--- a/chart/clusters/sandbox/custom/report-portal/templates/external-secrets/reportportal-rabbitmq-creds.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/templates/external-secrets/reportportal-rabbitmq-creds.yaml
@@ -10,9 +10,15 @@ spec:
   data:
   - secretKey: rabbitmq-erlang-cookie
     remoteRef:
+      conversionStrategy: Default
+      decodingStrategy: None
       key: /edp/system2
+      metadataPolicy: None
       property: reportportal.rabbitmq-cookie
   - secretKey: rabbitmq-password
     remoteRef:
+      conversionStrategy: Default
+      decodingStrategy: None
       key: /edp/system2
+      metadataPolicy: None
       property: reportportal.rabbitmq-password
