--- a/chart/clusters/sandbox/custom/report-portal/templates/external-secrets/reportportal-minio-creds.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/templates/external-secrets/reportportal-minio-creds.yaml
@@ -10,9 +10,15 @@ spec:
   data:
   - secretKey: root-password
     remoteRef:
+      conversionStrategy: Default	
+      decodingStrategy: None
       key: /edp/system2
+      metadataPolicy: None
       property: reportportal.root-password
   - secretKey: root-user
     remoteRef:
+      conversionStrategy: Default	
+      decodingStrategy: None
       key: /edp/system2
+      metadataPolicy: None
       property: reportportal.root-user
