--- a/chart/clusters/sandbox/custom/report-portal/templates/external-secrets/reportportal-postgresql-creds.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/templates/external-secrets/reportportal-postgresql-creds.yaml
@@ -10,9 +10,15 @@ spec:
   data:
   - secretKey: postgresql-password
     remoteRef:
+      conversionStrategy: Default
+      decodingStrategy: None
       key: /edp/system2
+      metadataPolicy: None
       property: reportportal.postgresql-password
   - secretKey: postgresql-postgres-password
     remoteRef:
+      conversionStrategy: Default
+      decodingStrategy: None
       key: /edp/system2
+      metadataPolicy: None
       property: reportportal.postgresql-postgres-password
