--- a/chart/clusters/sandbox/custom/report-portal/Chart.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/Chart.yaml
@@ -27,3 +27,6 @@ dependencies:
   - name: elasticsearch
     version: 7.17.3
     repository: https://helm.elastic.co
+  - name: postgresql
+    version: 10.9.4
+    repository: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
