--- a/chart/clusters/sandbox/custom/report-portal/templates/external-secrets/reportportal-minio-creds.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/templates/external-secrets/reportportal-minio-creds.yaml
@@ -12,13 +12,13 @@ spec:
     remoteRef:
       conversionStrategy: Default
       decodingStrategy: None
-      key: /edp/system2
+      key: /edp/addons/eks-core/report-portal
       metadataPolicy: None
       property: reportportal.root-password
   - secretKey: root-user
     remoteRef:
       conversionStrategy: Default
       decodingStrategy: None
-      key: /edp/system2
+      key: /edp/addons/eks-core/report-portal
       metadataPolicy: None
       property: reportportal.root-user
