add adrgocd project

--- a/chart/clusters/sandbox/apps/values.yaml
+++ b/chart/clusters/sandbox/apps/values.yaml
@@ -1,5 +1,9 @@
 destinationServer: "in-cluster"
 
+argocd-app-project:
+  createNamespace: false
+  enable: true
+
 capsule:
   createNamespace: true
   enable: true
