--- a/chart/clusters/sandbox/apps/templates/argocd-app-project.yaml
+++ b/chart/clusters/sandbox/apps/templates/argocd-app-project.yaml
@@ -19,7 +19,7 @@ spec:
     automated:
       prune: true
     syncOptions:
-      - CreateNamespace={{ (index .Values "argocd" "createNamespace") }}
+      - CreateNamespace={{ .Values.argocd.createNamespace }}
     retry:
       limit: 1
       backoff:
