--- a/chart/clusters/sandbox/custom/report-portal/values.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/values.yaml
@@ -34,10 +34,20 @@ reportportal:
   postgresql:
     SecretName: "reportportal-postgresql-creds"
     endpoint:
-      address: report-portal-postgresql.report-portal.svc.cluster.local
+      address: postgresql-primary.report-portal.svc.cluster.local
 
-  elasticsearch:
-    endpoint: http://elasticsearch-master.report-portal.svc.cluster.local:9200
+  searchengine:
+    doubleEntry:
+      enable: true
+    ## @param searchengine.endpoint URL without protocol and port. By default opensearch-cluster-master.{{ .Release.Namespace }}.svc.cluster.local
+    endpoint: opensearch-cluster-master.report-portal.svc.cluster.local
+    ## ref. to @param searchengine.protocol
+    ssl: false  ## set to `true` if use HTTPS
+    port: 9200
+
+
+#  elasticsearch:
+#    endpoint: http://elasticsearch-master.report-portal.svc.cluster.local:9200
 
   storage:
     type: minio
@@ -72,23 +82,26 @@ minio:
   persistence:
     size: 1Gi
 
-postgresql:
-  persistence:
-    size: 1Gi
-  resources:
-    requests:
-      cpu: "100m"
-  postgresqlUsername: "rpuser"
-  postgresqlDatabase: "reportportal"
-  existingSecret: "reportportal-postgresql-creds"
-  initdbScripts:
-    init_postgres.sh: |
-      #!/bin/sh
-      /opt/bitnami/postgresql/bin/psql -U postgres -d ${POSTGRES_DB} -c 'CREATE EXTENSION IF NOT EXISTS ltree; CREATE EXTENSION IF NOT EXISTS pgcrypto; CREATE EXTENSION IF NOT EXISTS pg_trgm;'
-
 rabbitmq:
   auth:
     existingPasswordSecret: reportportal-rabbitmq-creds
     existingErlangSecret: reportportal-rabbitmq-creds
   persistence:
     size: 1Gi
+
+opensearch:
+  install: true   ## set to `false` if using a Cloud/On-Premise managed OpenSearch.
+  image:
+    repository: opensearchproject/opensearch
+    tag: 2.11.1
+  ## @param opensearch.singleNode If "true", replicas will be forced from 3 to 1
+  singleNode: true
+  ## @param opensearch.httpPort Port for OpenSearch endpoint
+  httpPort: 9200
+  startupProbe:
+    initialDelaySeconds: 30
+  extraEnvs:
+    - name: DISABLE_INSTALL_DEMO_CONFIG
+      value: "true"
+    - name: DISABLE_SECURITY_PLUGIN
+      value: "true"
