--- a/chart/clusters/sandbox/custom/report-portal/Chart.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: report-portal
-description: A Helm chart for report-portal
+name: reportportal
+description: A Helm chart for reportportal
 
 # Application charts are a collection of templates that can be packaged into versioned archives
 # to be deployed.
@@ -9,6 +9,11 @@ type: application
 # The chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 version: 23.2.0
+
+sources:
+  - https://github.com/reportportal/kubernetes
+keywords:
+  - reportportal
 
 # Version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
