--- a/chart/clusters/sandbox/custom/report-portal/Chart.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/Chart.yaml
@@ -1,16 +1,14 @@
-appVersion: "23.2"
+apiVersion: v2
+name: report-portal
 description: ReportPortal.io AI-powered Test Automation Dashboard
-name: reportportal
-version: 23.2.0
-sources:
-  - https://github.com/reportportal/kubernetes
-keywords:
-  - reportportal
-maintainers:
-  - name: reportportal
-    email: support@reportportal.io
+version: 23.2
 
 dependencies:
+dependencies:
+  - name: reportportal
+    version: 23.2.0
+    repository: https://github.com/reportportal/kubernetes
+    version: develop
   - name: rabbitmq
     version: 10.3.9
     repository: https://charts.bitnami.com/bitnami
