--- a/chart/clusters/sandbox/custom/report-portal/Chart.yaml
+++ b/chart/clusters/sandbox/custom/report-portal/Chart.yaml
@@ -1,14 +1,23 @@
 apiVersion: v2
 name: report-portal
-description: ReportPortal.io AI-powered Test Automation Dashboard
-version: 23.2
+description: A Helm chart for report-portal
+
+# Application charts are a collection of templates that can be packaged into versioned archives
+# to be deployed.
+type: application
+
+# The chart version. This version number should be incremented each time you make changes
+# to the chart and its templates, including the app version.
+version: 5.10.0
+
+# Version number of the application being deployed. This version number should be
+# incremented each time you make changes to the application.
+appVersion: "23.2"
 
 dependencies:
-dependencies:
   - name: reportportal
-    version: 23.2.0
-    repository: https://github.com/reportportal/kubernetes
-    version: develop
+    version: 5.10.0
+    repository: https://reportportal.io/kubernetes
   - name: rabbitmq
     version: 10.3.9
     repository: https://charts.bitnami.com/bitnami
