--- a/chart/clusters/default/apps/templates/nexus-operator.yaml
+++ b/chart/clusters/default/apps/templates/nexus-operator.yaml
@@ -15,7 +15,7 @@ spec:
     helm:
       values: |
         nexus-operator:
-        {{- toYaml .Values.nexusOperator | nindent 10 }}
+        {{- toYaml .Values.nexus-operator | nindent 10 }}
   destination:
     server: {{ .Values.destinationServer | default "https://kubernetes.default.svc" }}
     namespace: nexus2
