--- a/chart/clusters/default/apps/templates/nexus-operator.yaml
+++ b/chart/clusters/default/apps/templates/nexus-operator.yaml
@@ -19,7 +19,7 @@ spec:
         {{- toYaml (index .Values "nexus-operator") | nindent 10 }}
   destination:
     name: {{ .Values.destinationServer | default "in-cluster" }}
-    namespace: nexus
+    namespace: nexus2
   syncPolicy:
     automated:
       prune: true
