--- a/chart/clusters/sandbox/custom/nexus/templates/oidc/keycloak-client.yaml
+++ b/chart/clusters/sandbox/custom/nexus/templates/oidc/keycloak-client.yaml
@@ -5,7 +5,7 @@ metadata:
   name: nexus
 spec:
   advancedProtocolMappers: true
-  clientId: nexus
+  clientId: nexus2
   defaultClientScopes:
     - groups
     - edp
