--- a/chart/clusters/sandbox/custom/nexus-operator/values.yaml
+++ b/chart/clusters/sandbox/custom/nexus-operator/values.yaml
@@ -14,7 +14,7 @@ nexus-operator:
 
   nexusCR:
     # -- Specifies whether Nexus CR should be created
-    create: true
+    create: false
 
   nexus:
     # -- Flag to enable/disable Nexus deploy
