--- a/chart/clusters/sandbox/custom/nexus/templates/oidc/keycloak-client.yaml
+++ b/chart/clusters/sandbox/custom/nexus/templates/oidc/keycloak-client.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1.edp.epam.com/v1
 kind: KeycloakClient
 metadata:
-  name: nexus
+  name: nexus2
 spec:
   advancedProtocolMappers: true
   clientId: nexus2
