--- a/chart/clusters/sandbox/custom/nexus-operator/charts/templates/external-secret/nexus-admin-password-secret.yaml
+++ b/chart/clusters/sandbox/custom/nexus-operator/charts/templates/external-secret/nexus-admin-password-secret.yaml
@@ -1,20 +1,24 @@
-{{ if index .Values "oauth2-proxy" "enabled" }}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: keycloak-client-nexus-secret
+  name: nexus-admin-password
 spec:
   refreshInterval: 1h
   secretStoreRef:
     kind: SecretStore
     name: aws-parameterstore
   data:
-  # should be clientSecret, since keycloak operator uses this key for secret
-  - secretKey: clientSecret
+  - secretKey: user
     remoteRef:
       conversionStrategy: Default
       decodingStrategy: None
       key: /edp/system
       metadataPolicy: None
-      property: keycloak-client-nexus-secret.clientSecret
-{{ end }}
+      property: nexus.user
+  - secretKey: password
+    remoteRef:
+      conversionStrategy: Default
+      decodingStrategy: None
+      key: /edp/system
+      metadataPolicy: None
+      property: nexus.password
