--- a/chart/clusters/sandbox/custom/nexus-operator/charts/templates/external-secret/nexus-ci-password-secret.yaml
+++ b/chart/clusters/sandbox/custom/nexus-operator/charts/templates/external-secret/nexus-ci-password-secret.yaml
@@ -8,7 +8,7 @@ spec:
     kind: SecretStore
     name: aws-parameterstore
   data:
-  - secretKey: username
+  - secretKey: password
     remoteRef:
       conversionStrategy: Default
       decodingStrategy: None
