--- a/chart/clusters/sandbox/custom/nexus-operator/charts/templates/nexus/repository/maven/edp-maven-releases.yaml
+++ b/chart/clusters/sandbox/custom/nexus-operator/charts/templates/nexus/repository/maven/edp-maven-releases.yaml
@@ -6,8 +6,9 @@ metadata:
 spec:
   nexusRef:
     name: nexus
-  nuget:
+  maven:
     hosted:
+      versionPolicy: release
       name: edp-maven-releases
       storage:
         blobStoreName: "edp-maven"
