--- a/chart/clusters/sandbox/custom/nexus/values.yaml
+++ b/chart/clusters/sandbox/custom/nexus/values.yaml
@@ -10,7 +10,7 @@ nexus-repository-manager:
     enabled: true
     annotations:
       nginx.ingress.kubernetes.io/proxy-body-size: "900m"
-    hostRepo: nexus2-ci.eks-sandbox.aws.main.edp.projects.epam.com
+    hostRepo: nexus2-ci.example.com
 
   deployment:
     initContainers:
@@ -41,7 +41,7 @@ nexus-repository-manager:
 
   persistence:
     enabled: true
-    storageSize: 30Gi
+    storageSize: 5Gi
 
 oauth2-proxy:
   enabled: true
@@ -60,7 +60,7 @@ oauth2-proxy:
       pass_authorization_header = "true"
       pass_basic_auth = "false"
       provider = "keycloak-oidc"
-      redirect_url = "https://nexus2.eks-sandbox.aws.main.edp.projects.epam.com/oauth2/callback"
+      redirect_url = "https://nexus2.example.com/oauth2/callback"
       skip_jwt_bearer_tokens = "true"
       upstreams = [ "http://nexus:8081" ]
       whitelist_domains = ["*"]
@@ -70,4 +70,4 @@ oauth2-proxy:
   ingress:
     enabled: true
     hosts:
-      - nexus2.eks-sandbox.aws.main.edp.projects.epam.com
+      - nexus2.example.com
