--- a/chart/clusters/sandbox/custom/nexus-operator/charts/templates/nexus/repository/dotnet/edp-dotnet-script.yaml
+++ b/chart/clusters/sandbox/custom/nexus-operator/charts/templates/nexus/repository/dotnet/edp-dotnet-script.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nexusscript
   namespace: nexus
 spec:
-  name: get-nuget-token.groovy
+  name: get-nuget-token
   content: |
     /* Copyright 2023 EPAM Systems.
 
