--- a/chart/clusters/okd-sandbox/custom/harbor-ha-okd/Chart.yaml
+++ b/chart/clusters/okd-sandbox/custom/harbor-ha-okd/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: nexus-operator
-description: A Helm chart for EDP Nexus Operator
+name: harbor-ha
+description: A Helm chart for Harbor with HA
 
 # Application charts are a collection of templates that can be packaged into versioned archives
 # to be deployed.
@@ -8,13 +8,19 @@ type: application
 
 # The chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 3.1.0
+version: 1.13.0
 
 # Version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
-appVersion: "3.1.0"
+appVersion: "2.9.0"
 
 dependencies:
-- name: nexus-operator
-  version: 3.1.0
-  repository: https://epam.github.io/edp-helm-charts/stable
+  - name: harbor
+    version: 1.13.0
+    repository: https://helm.goharbor.io
+  - name: redis
+    version: 17.11.6
+    repository: https://charts.bitnami.com/bitnami
+  - name: minio
+    version: 12.6.5
+    repository: https://charts.bitnami.com/bitnami
