--- a/chart/clusters/okd-sandbox/custom/nexus-okd/Chart.yaml
+++ b/chart/clusters/okd-sandbox/custom/nexus-okd/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: nexus-operator
-description: A Helm chart for EDP Nexus Operator
+name: nexus
+description: A Helm chart for Nexus
 
 # Application charts are a collection of templates that can be packaged into versioned archives
 # to be deployed.
@@ -8,13 +8,16 @@ type: application
 
 # The chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 3.1.0
+version: 59.0.0
 
 # Version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
-appVersion: "3.1.0"
+appVersion: "3.59.0"
 
 dependencies:
-- name: nexus-operator
-  version: 3.1.0
-  repository: https://epam.github.io/edp-helm-charts/stable
+- name: nexus-repository-manager
+  version: 59.0.0
+  repository: https://sonatype.github.io/helm3-charts/
+- name: oauth2-proxy
+  version: 6.16.1
+  repository: https://oauth2-proxy.github.io/manifests/
