--- a/chart/clusters/okd-sandbox/custom/sonar/Chart.yaml
+++ b/chart/clusters/okd-sandbox/custom/sonar/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: nexus-operator
-description: A Helm chart for EDP Nexus Operator
+name: sonarqube
+description: A Helm chart for Sonarqube
 
 # Application charts are a collection of templates that can be packaged into versioned archives
 # to be deployed.
@@ -8,13 +8,13 @@ type: application
 
 # The chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 3.1.0
+version: 1.0.31
 
 # Version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
-appVersion: "3.1.0"
+appVersion: "1.0.31"
 
 dependencies:
-- name: nexus-operator
-  version: 3.1.0
-  repository: https://epam.github.io/edp-helm-charts/stable
+- name: sonarqube-lts
+  version: 1.0.31
+  repository: https://SonarSource.github.io/helm-chart-sonarqube
