--- a/chart/clusters/okd-sandbox/apps/values.yaml
+++ b/chart/clusters/okd-sandbox/apps/values.yaml
@@ -29,6 +29,6 @@ nexusOperator:
   createNamespace: true
   enable: true
 
-postgresOperator:
+postgres-operator:
   createNamespace: true
   enable: true
