--- a/chart/clusters/okd-sandbox/apps/templates/sonar.yaml
+++ b/chart/clusters/okd-sandbox/apps/templates/sonar.yaml
@@ -17,7 +17,7 @@ spec:
         sonarqube-lts:
         {{- toYaml .Values.sonar | nindent 10 }}
   destination:
-    server: {{ .Values.destinationServer | default "in-cluster" }}
+    name: {{ .Values.destinationServer | default "in-cluster" }}
     namespace: sonar
   syncPolicy:
     automated:
