--- a/chart/clusters/okd-sandbox/apps/values.yaml
+++ b/chart/clusters/okd-sandbox/apps/values.yaml
@@ -4,6 +4,10 @@ extensionsOIDC:
   createNamespace: true
   enable: true
 
+external-secrets:
+  createNamespace: true
+  enable: true
+
 # Harbor with HA
 harborHAOKD:
   createNamespace: true
