add external-secret 092

--- a/chart/clusters/okd-sandbox/apps/templates/external-secrets.yaml
+++ b/chart/clusters/okd-sandbox/apps/templates/external-secrets.yaml
@@ -13,7 +13,7 @@ spec:
     path: chart/clusters/okd-sandbox/custom/external-secrets
     targetRevision: {{ .Values.targetRevision }}
     helm:
-      releaseName: external-secrets
+      releaseName: openshift-operators
       values: |
         external-secrets:
         {{- toYaml (index .Values "external-secrets") | nindent 10 }}
