align sonar operator

--- a/chart/clusters/okd-sandbox/custom/sonar-operator/templates/external-secret/sonar-ci-password-secret.yaml
+++ b/chart/clusters/okd-sandbox/custom/sonar-operator/templates/external-secret/sonar-ci-password-secret.yaml
@@ -10,8 +10,5 @@ spec:
   data:
   - secretKey: password
     remoteRef:
-      conversionStrategy: Default
-      decodingStrategy: None
-      key: /edp/addons/eks-sandbox/sonarqube
-      metadataPolicy: None
+      key: /edp/system2
       property: sonarqube-ci-user.password
