--- a/chart/clusters/okd-sandbox/custom/sonar-operator/templates/external-secret/sonar-admin-password-secret.yaml
+++ b/chart/clusters/okd-sandbox/custom/sonar-operator/templates/external-secret/sonar-admin-password-secret.yaml
@@ -10,15 +10,9 @@ spec:
   data:
   - secretKey: user
     remoteRef:
-      conversionStrategy: Default
-      decodingStrategy: None
-      key: /edp/addons/eks-sandbox/sonarqube
-      metadataPolicy: None
+      key: /edp/system
       property: sonarqube.user
   - secretKey: password
     remoteRef:
-      conversionStrategy: Default
-      decodingStrategy: None
-      key: /edp/addons/eks-sandbox/sonarqube
-      metadataPolicy: None
+      key: /edp/system
       property: sonarqube.password
