align sonar operator sa

--- a/chart/clusters/okd-sandbox/custom/sonar-operator/values.yaml
+++ b/chart/clusters/okd-sandbox/custom/sonar-operator/values.yaml
@@ -22,4 +22,4 @@ sonarSecret: "sonar-admin-password"
 oidc:
   enabled: true
   keycloakUrl: "https://keycloak.eks-core.aws.main.edp.projects.epam.com"
-  keycloakRealm: "shared"
+  keycloakRealm: "okd-sandbox"
