--- a/chart/clusters/okd-sandbox/custom/sonar-operator/templates/external-secret/sonar-admin-password-secret.yaml
+++ b/chart/clusters/okd-sandbox/custom/sonar-operator/templates/external-secret/sonar-admin-password-secret.yaml
@@ -10,9 +10,9 @@ spec:
   data:
   - secretKey: user
     remoteRef:
-      key: /edp/system
+      key: /edp/addons/okd-sandbox/sonarqube
       property: sonarqube.user
   - secretKey: password
     remoteRef:
-      key: /edp/system
+      key: /edp/addons/okd-sandbox/sonarqube
       property: sonarqube.password
