--- a/chart/clusters/okd-sandbox/custom/sonar-operator/templates/external-secret/sonar-ci-password-secret.yaml
+++ b/chart/clusters/okd-sandbox/custom/sonar-operator/templates/external-secret/sonar-ci-password-secret.yaml
@@ -10,5 +10,5 @@ spec:
   data:
   - secretKey: password
     remoteRef:
-      key: /edp/system2
+      key: /edp/addons/okd-sandbox/sonarqube
       property: sonarqube-ci-user.password
