--- a/chart/clusters/okd-sandbox/custom/extensions-oidc/templates/keycloak.yaml
+++ b/chart/clusters/okd-sandbox/custom/extensions-oidc/templates/keycloak.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1.edp.epam.com/v1
-kind: Keycloak
+apiVersion: v1.edp.epam.com/v1alpha1
+kind: ClusterKeycloak
 metadata:
   name: keycloak
 spec:
