--- a/chart/clusters/okd-sandbox/apps/templates/extensions-oidc.yaml
+++ b/chart/clusters/okd-sandbox/apps/templates/extensions-oidc.yaml
@@ -18,7 +18,7 @@ spec:
         {{- toYaml .Values.extensionsOIDC | nindent 10 }}
   destination:
     name: {{ .Values.destinationServer | default "in-cluster" }}
-    namespace: security
+    namespace: security2
   syncPolicy:
     automated:
       prune: true
