--- a/chart/clusters/okd-sandbox/apps/templates/nexus-okd.yaml
+++ b/chart/clusters/okd-sandbox/apps/templates/nexus-okd.yaml
@@ -1,4 +1,4 @@
-{{- if and (.Values.nexus-okd) (.Values.nexus-okd.enable) -}}
+{{- if and (index .Values "nexus-okd") (index .Values "nexus-okd" "enable") -}}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
