--- a/chart/clusters/okd-sandbox/apps/templates/nexus-okd.yaml
+++ b/chart/clusters/okd-sandbox/apps/templates/nexus-okd.yaml
@@ -15,7 +15,7 @@ spec:
     helm:
       values: |
         nexus-repository-manager:
-        {{- toYaml .Values.nexus-okd | nindent 10 }}
+        {{- toYaml .Values "nexus-okd" | nindent 10 }}
   destination:
     name: {{ .Values.destinationServer | default "okd-sandbox" }}
     namespace: nexus
