nexus align app5

--- a/chart/clusters/okd-sandbox/apps/templates/sonar-operator.yaml
+++ b/chart/clusters/okd-sandbox/apps/templates/sonar-operator.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: sonar-operator
+  name: {{ .Values.destinationServer}}-sonar-operator
   namespace: {{ .Values.argoNamespace | default "argocd" }}
   finalizers:
   - resources-finalizer.argocd.argoproj.io
