--- a/chart/clusters/okd-sandbox/apps/templates/nexus-okd.yaml
+++ b/chart/clusters/okd-sandbox/apps/templates/nexus-okd.yaml
@@ -15,9 +15,9 @@ spec:
     helm:
       values: |
         nexus-repository-manager:
-        {{- toYaml .Values "nexus-okd" | nindent 10 }}
+        {{- toYaml .Values.nexus-okd | nindent 10 }}
   destination:
-    name: {{ .Values.destinationServer | default "okd-sandbox" }}
+    name: {{ .Values.destinationServer | default "in-cluster" }}
     namespace: nexus
   syncPolicy:
     automated:
