--- a/chart/clusters/okd-sandbox/custom/nexus-okd/templates/scc/nexus.yaml
+++ b/chart/clusters/okd-sandbox/custom/nexus-okd/templates/scc/nexus.yaml
@@ -19,7 +19,7 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-  - system:serviceaccount:nexus:nexus-repo
+  - system:serviceaccount:nexus:{{- toYaml (index .Values "nexus-repository-manager" "serviceAccount" "name") }}
 allowHostDirVolumePlugin: false
 allowHostIPC: true
 allowHostNetwork: false
