nexus align app13

--- a/chart/clusters/okd-sandbox/custom/nexus-okd/values.yaml
+++ b/chart/clusters/okd-sandbox/custom/nexus-okd/values.yaml
@@ -1,7 +1,7 @@
 nexus-repository-manager:
   nameOverride: "nexus"
   fullnameOverride: "nexus"
-  serviceAccount:
+  serviceAccountName:
     name: nexus-repo
   ingress:
     enabled: false
