nexus align app15

--- a/chart/clusters/okd-sandbox/custom/nexus-okd/templates/scc/nexus-oauth2-proxy.yaml
+++ b/chart/clusters/okd-sandbox/custom/nexus-okd/templates/scc/nexus-oauth2-proxy.yaml
@@ -17,7 +17,7 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-  - system:serviceaccount:nexus:nexus-oauth2-proxy
+  - system:serviceaccount:nexus:{{- toYaml (index .Values "oauth2-proxy" "serviceAccount" "name") }}
 allowHostDirVolumePlugin: false
 allowHostIPC: true
 allowHostNetwork: false
